--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,83 @@
+21.07.2022 v 5.1
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.1&state=all
+- Trails: redirect() soll sich wie url_for() bedienen lassen [#1]
+- Raumverwaltung: Berechtigungsübersicht soll eine Liste mit Personen anzeigen, die Berechtigungen haben [#11]
+- Vor dem tatsächlichen Verschieben einer Buchung im Belegungsplan soll eine Sicherheitsabfrage erscheinen [#12]
+- Mehr Termininformationen beim Erstellen/Bearbeiten von Raumanfragen in VA anzeigen [#13]
+- StEP00358 Schnittstelle zum OER Portal Niedersachsen [#23]
+- Auswahl des Buchungstyps für den Export der Raumbelegungen [#67]
+- Freitext unterhalb eines exportierten Raumbelegungsplanes [#68]
+- Upgrade der JSONAPI-Bibliotheken [#80]
+- Update codeception und phpunit [#81]
+- Erweiterung der Anmelderegel "Veranstaltungsbezogene Anmeldung" [#87]
+- Auflösen von Anfragen: Information zu gebuchten Räumen fehlen [#88]
+- Anfragenliste: Erweitern um einen Filter für abgelehnte Anfragen [#93]
+- Slim muss Installation in Unterordner beachten [#119]
+- TIC: CLI-Skript `cli/plugin_manager` wart- und erweiterbarer machen [#122]
+- Terminvergabe: Mehrere durchführende Personen [#132]
+- StEP 359: Verwaltung der Migrationen über versionierte Branches [#136]
+- CLI-Skript `studip` einführen und alte Skripte entsprechend umstellen [#140]
+- Fehlerhafte Signatur von `#invoke` in Unterklassen von `NonJsonApiController` [#142]
+- Unit-Tests müssen ohne `pdo_sqlite` auskommen [#147]
+- Raumsuche: Aktion „URL zur Suche kopieren“ hinzufügen [#160]
+- Buchungsdialog: Bei Reservierung die Aktion „In Buchung umwandeln“ anbieten und umgekehrt [#167]
+- Courseware: Fehler beim Kopieren  aus Veranstaltungen [#168]
+- Gruppenzugehörigkeit bei Terminen [#196]
+- Migration von 4.6.2 auf 5.1 funktioniert nicht korrekt [#203]
+- JSONAPI: Verschachtelte `include`-Pfade werden nicht mehr berücksichtig [#262]
+- Update auf 5.1 erkennt DB-Schema falsch, wenn lokale Migrationen existieren [#331]
+- Migration 5.0.x bekommt falsche Branch-Zuordnung [#337]
+- Upload von Bildern auf Courseware-Seiten nicht möglich [#350]
+- StEP00357: Coursewareinhalte zuweisen [#367]
+- Skiplinks hinzufügen und umbenennen [#394]
+- Access-Keys ausbauen [#395]
+- OpenID Connect als SSO AuthPlugin [#397]
+- Nutzungsbedingungen für Studiengruppen übersetzbar machen [#400]
+- VA-Themen übersetzbar machen [#401]
+- Zielgruppenspezifische Banner [#409]
+- Zielgruppenspezifische Ankündigungen und priorisierung [#410]
+- Update der browserslist DB [#426]
+- Anpassung der ILIAS-Schnittstelle für Nutzung mit ILIAS-seitiger LDAP/Shibboleth-Anbindung [#431]
+- JSONAPI: Messages zeigen keine Relationen mehr [#434]
+- Skiplinks werden als „Schalter“ vorgelesen und sehen noch wie Buttons aus [#438]
+- Skiplinks: Auswahl eines Skiplinks versteckt zwar das Skiplink-Menü, aber man bleibt trotzdem innerhalb des Menüs [#583]
+- TwilloConnector ignoriert Proxy Einstellungen [#635]
+- .gitignore config/twillo* hinzufügen [#640]
+- StudipController::redirect() akzeptiert keine relativen URLs mehr, sondern interpretiert diese als trails-routen [#642]
+- CLI-Script "plugin:activate" fehlt [#650]
+- alte Einstellungen für die Hilfe entfernen [#655]
+- Courseware PDF-Export: Fehler beim Export des Embed Blocks [#664]
+- Courseware PDF-Export [#667]
+- Semesterzuordnung von Veranstaltungen kann nicht geändert werden [#686]
+- ConsultationSlot: Fatal error in updateEvents() [#691]
+- Fehlende ID "sidebar-navigation" am Navigations-Widget in der Sidebar [#697]
+- Migrationen eines Plugins werden über CLI nicht mehr ausgeführt [#701]
+- Courseware: PDF-Export von mehreren Seiten nicht möglich [#712]
+- Ansichtsoption Bearbeiten wird angezeigt, obwohl nicht bearbeitet werden kann [#716]
+- Courseware Aufgaben erhalten falsche Seitentitel [#717]
+- Aufgaben werde im IHV nicht gefiltert [#718]
+- Courseware Aufgaben sind in der Verwaltung nicht unterscheidbar [#720]
+- Courseware Ansicht trägt falsche Bezeichnung [#722]
+- Courseware Export Widget verhindert PDF-Export für Lernende [#735]
+- DSGVO: Export Personendaten wirft Fehler [#762]
+- ConsultationBlock::teacher not found [#767]
+- Fehler im DB-Schema des Clipboards [#776]
+- Migrationen werden nicht angeboten, wenn `schema_version` inkonsistent ist [#778]
+- Update package-lock [#789]
+- Courseware: Sortierung wird beim Abbrechen nicht zurückgesetzt [#810]
+- Courseware: Verschieben von Blöcken zwischen Containern auf der gleichen Seite funktioniert nicht [#811]
+- Rolle "sort" soll auch blau sein [#920]
+- Courseware Sidebar Navigation [#953]
+- Courseware: Inhaltsblock > Aufgaben-Element [#954]
+- Courseware Aufgaben: Unterseiten werden nicht auf Rechte geprüft [#1112]
+- Courseware Aufgaben: Name des Bearbeiters fehlt im Titel [#1113]
+- Courseware Contents Overview: Eigene Seite wird nicht mitgezählt [#1114]
+- Routen für die Sprechstunden/Terminvergabe sind nicht implementiert [#1149]
+- Tests für die Routen der Sprechstunden/Terminvergabe implementieren [#1174]
+- Aktion „URL zur Suche kopieren“ steht über dem Suchformular [#1208]
+- Fehler im Code der JSONAPI [#1228]
+- Migration 1.297 schlägt beim Update von 4.4 auf 5.1 fehl [#1256]
+
 15.07.2022 v 5.0.2
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0.2&state=all
 - Meine Räume: Suche findet nur Gebäude, keine Räume [#378]
