--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,194 @@
+18.11.2022 v 5.1.1
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.1.1&state=all
+- Courseware PDF-Export: Block Infomationen im Fallback nicht immer brauchbar [#723]
+- Verwendung von `have_studip_perm()` in lib/classes/JsonApi/Routes/Courseware/Authority.php [#1047]
+- Courseware: Aufgaben zuweisen [#1122]
+- OER-Campus > Entdeckermodus > Schlagwortbox [#1129]
+- Courseware: Bearbeiten/Verwalten von zugewiesenen Aufgaben [#1144]
+- Courseware: Hängt bei "Lege Import Ordner an" [#1259]
+- Courseware Bookmark Übersicht ist leer [#1406]
+- Bearbeiten als Teilnehmende auch mit eingestellter Berechtigung nicht möglich [#1452]
+- Fehler beim Hinzufügen von JSONAPI-Routen durch Plugins [#1505]
+- StudipController::url_for('', ['foo' => 'bar']) ignoriert die übergebenen Parameter [#1538]
+- Aktivitätsfeed ist kaputt [#1557]
+- Signatur der Methoden zum Hinzufügen von Routen an JsonApi\Contracts\JsonApiPlugin sind fehlerhaft [#1567]
+- Arbeitsplatz / Courseware : Art des Lernmaterials wird beim Erstellen nicht gesetzt [#1584]
+- Courseware  Art des Lernmaterials inkonsistent benannt [#1585]
+- Fehler in Sprechstunden beim Zusammenführen von Accounts [#1625]
+- Sequentielle Reihenfolge: Nicht zur Verfügung stehende Kapitel können über die Exportfunktion weiterhin eingesehen werden [#1632]
+- Terminvergabe: Bulkaktionen in der Verwaltung der Termine funktionieren nicht wie erwartet [#1641]
+- Passwortlink beim Zurücksetzen über die Adminoberfläche ist nicht lang genug gültig [#1647]
+- Errorhandler für die JSONAPI sollten auch den richtigen Content-Type setzen [#1659]
+
+18.11.2022 v 5.0.3
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0.3&state=all
+- Benachrichtigungen sind nicht per Tastaturnavigation erreichbar [#109]
+- Fehlender Uni-Name bei Mail zur Passwortänderung [#134]
+- Infodialog zu Ressourcen ignoriert Einstellung RESOURCES_SHOW_PUBLIC_ROOM_PLANS [#143]
+- "Wiki-Seiten importeren" findet keine Veranstaltungen mehr [#145]
+- Raumplanung: Sortierung der Raumanfragen funktioniert nicht [#188]
+- Raumanfragen: Suche anhand der gewünschten Raumeigenschaften findet zu wenig Räume [#239]
+- Raumanfragen: Teilweise belegte Räume nicht buchbar [#240]
+- Migration der Seminare-Semester-Tabelle ist fehlerhaft [#249]
+- Seite "Raumverwaltung > Übersicht > Räume" lädt sehr langsam [#357]
+- Hierarchie beim Anlegen von Räumen ist falsch sortiert [#358]
+- Neu angelegte Accounts bekommen kein Paßwort und können auch keines setzen [#513]
+- Teilnehmendenseite: „Nachricht mit Mailweiterleitung senden“ wird doppelt vorgelesen [#562]
+- Dateibereich: Aktion „Bildergalerie öffnen“ tut nichts [#620]
+- Courseware: Kopieren von Inhalten in den gleichen Kurs nicht möglich [#636]
+- Fehlender globaler Schalter für das Abschalten der Courseware (veranstaltungsunabhängig) [#648]
+- Austragen einer Person aus einer VA aktualisiert consultation_events nicht [#675]
+- "Passwortlink zusenden" funktioniert für Admins und Root nicht [#866]
+- Courseware: Unterstützung von Hausaufgabenordnern [#874]
+- Courseware: Teile des Inhaltsverzeichnis nicht durch Scrollen zu erreichen [#900]
+- Courseware: "Lesezeichen setzen" setzt kein Lesezeichen und wirft Fehler [#910]
+- Courseware: Import von Inhalten zeigt keine Dateien an, wenn Lizenz keinen Download erlaubt [#921]
+- Springende Navigationsbar im Vollbildmodus [#967]
+- Gelöschter/abgesagter Termin verbleibt im Terminkalender [#982]
+- Courseware: TypeError: n['users/byId'](...) is undefined [#994]
+- Courseware: Lernkarte wird beim Laden des Blocks nicht korrekt aktiviert [#996]
+- Youtube-Video im Embed-Block wird nicht korrekt formatiert, wenn es in einem Tab-Abschnitt liegt [#1002]
+- Courseware: Block Audioaufnahme: Audioaufnahme lässt sich nicht speichern. [#1058]
+- Hinzufügen einer Einrichtung zu Personen funktioniert nicht, wenn die Berechtigungsstufe der Person durch ein Authentifizerungsplugin gesperrt wurde [#1096]
+- Konversationssuche im Veranstaltungsblubber funktioniert nicht [#1116]
+- Stud.IP 5.1: Fehlermeldung bei der Aktivierung des DB-Caches [#1124]
+- Fehler beim Import von Ordnern ohne Namen (ggf. ist der Export schon defekt?) [#1160]
+- Webpack 5.6 ist nicht mit OpenSSL 3 kompatibel [#1216]
+- Courseware: "TypeError: t.container is undefined" in der Console [#1285]
+- Courseware: Fehler bei Farbauswahl im Leinwand-Block [#1291]
+- Courseware: Fehler beim Löschen eines Blocks [#1292]
+- Verhaltensänderung in RolePersistence::getAssignedRoleInstitutes() durch #1180 [#1360]
+- Courseware: Abschnitte und Seiten sind nach dem Kopieren in falscher Reihenfolge [#1361]
+- OER-Campus: Kontrastschwache Texte [#1365]
+- Login: Kontrast zu schwach [#1367]
+- jQuery Datumswähler: Kontraste nicht optimal [#1372]
+- Profil: Graue Schrift [#1373]
+- Footer: Hover ändern [#1379]
+- Hilfelasche: Unnötiger Hovereffekt [#1380]
+- Blubber: An mehreren Stellen wird grauer und kontrastschwacher Text verwendet [#1383]
+- OER-Campus: Titel werden je nach Browser anders/ungünstig gekürzt [#1385]
+- Beim Hochladen einer Datei sind unter Chromium / Chrome nicht alle Nutzungsbedingungen per Tastatur auswählbar [#1390]
+- Courseware: Übersetzung der Blocktypen und -beschreibungen funktioniert nicht [#1394]
+- Admins können Veranstaltungen keinen Hauptveranstaltungen zuweisen [#1449]
+- Courseware: Fortschrittsanzeige bleibt immer bei 0% [#1453]
+- Courseware enthält unsichtbare Blöcke, die aber beim Fortschritt mitgezählt werden [#1454]
+- Kleiner Schreibfehler bei Passwortänderungsmail [#1492]
+- Erkennung vom High Contrast Mode ist unter Umständen kaputt [#1493]
+- "Neue" Icons auf der Seite "Meine Veranstaltungen" im High Contrast-Modus werden grau [#1500]
+- Voreingestellte Plugins für Einrichtungen sind nach dem Update auf 5.0 nicht mehr aktiviert [#1506]
+- Anlegeassistent speichert Semesterzuordnung nicht [#1507]
+- Hilfelasche: redundantes CSS beim Hovereffekt [#1533]
+- Cacheverwaltung: Platzhalter in den Einstellungen sind etwas verwirrend [#1536]
+- Fehler bei "Meine Studiengruppen" Übersicht mit neuen Dateien [#1541]
+- PHP Warning:  Division by zero [#1542]
+- $this->user gibt es nicht (Folgeproblem von #836) [#1545]
+- PHP Warning:  count(): Parameter must be an array or an object that implements Countable in lib/classes/coursewizardsteps/LVGroupsWizardStep.php on line 409 [#1550]
+- Courseware: Fehler beim Laden, wenn man Admin oder nur Vertretung im Kurs ist [#1551]
+- Schlechte Performance von Suche in GlobalSearchCourses [#1561]
+- Fehler bei der Terminvereinbarung - Sidebar [#1564]
+- Hinweis auf noch auszufügende Migrationen erscheint nach 5 Minuten wieder [#1566]
+- JSONAPI erlaubt das Setzen der Sprache über HTTP-Header "Accept-Language" nicht [#1568]
+- Courseware lädt nicht mehr : 500 Class 'JsonApi\PluginManager' not found [#1570]
+- Courseware: Funktion "Elemente hinzufügen" ist unten abgeschnitten [#1571]
+- Courseware: Falsches HTML-Escaping im Dialog zum Export [#1575]
+- Falsche E-Mail beim Setzen eines Paßworts [#1590]
+- Übersetzungen mehrsprachiger Config-Einstellungen bleiben nach dem Löschen in der DB zurück [#1597]
+- MyCoursesSearch liefert bei aktiviertem DEPUTIES_ENABLE falsche Ergebnisse [#1606]
+- Tab-Abschnitte in der Courseware können nicht bearbeitet werden [#1618]
+- Abschnitt Typ Liste stellt die Sortierung nicht da. [#1620]
+- Icon für Termine auf "Meine Veranstaltungen" berücksichtigt auch ausgefallene Termine [#1643]
+- Dateien mit großgeschriebener Dateiendung können nicht hochgeladen werden [#1644]
+- Fehler beim Hinzufügen von Personen zu Sprechstunden über die Adminoberfläche [#1648]
+- Veranstaltungen werden bei Gruppierung nicht mehr angezeigt [#1668]
+- CW: l10n-Fehler beim Courseware-Reiter [#1680]
+- Studienbereiche können nicht gelöscht werden auch bei alternativer LV-Gruppen-Zuordnung [#1681]
+- Gelöschte Nutzer führen zu Fehlern in der Courseware [#1687]
+- StudipDialog.vue berechnet die Position falsch [#1689]
+- Freigabe von Seiten wird nicht vererbt [#1699]
+- Terminvergabe: Terminblöcke nach dem Anlegen bearbeiten [#1707]
+- Tabularasa-Aktion für Einrichtungen ist defekt [#1734]
+- Courseware: Fehler beim Import ("Lege Ordner an") [#1738]
+- Hinzufügen von Standardvertretungen funktioniert nicht mehr [#1743]
+- führende und angehängte Leerzeichen in Suchfeldern ignorieren [#1765]
+- Der Funktion getInfolabelPrperties fehlt ein O [#1767]
+- Meine Einrichtungen: Klick auf eine neue Ankündigung führt in eine Exception [#1772]
+- Meine Veranstaltungen lädt sich tot wenn ausgewähltes Semester nicht existiert [#1774]
+- Filter nach Semestern bei der Suche nach Veranstaltungen über die JSONAPI ist defekt [#1775]
+- Gruppenseite in einer VA: Bulk-Aktion „Nachricht schreiben“ schlägt fehl, wenn eine Person in mehreren Gruppen ist [#1776]
+- Aufrufen der Seite "Zugangsberechtigungen" dauert sehr lange [#1779]
+- Terminvergabe: Falsche Sortierung bei "Vergangene Termine" [#1785]
+
+18.11.2022 v 4.6.7
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.7&state=all
+- Falsche/feste Spaltenbreite in der Tabelle auf Admin > Log [#63]
+- Sperrzeiten in der Vergangenheit können nicht bearbeitet werden [#185]
+- Raumgruppen-Seriendruckfunktion ist nur für Raumadmins möglich [#201]
+- Raumanfragen: Termine in der Vergangenheit werden mit angezeigt [#243]
+- Datenfelder - Benötigter Status [#491]
+- Manuelle Buchung: Fehlermeldung beim Umwandel von Wiederholungsterminen in Einzeltermine fehlt [#549]
+- Plugin-Typen werden beim Update nicht aktualisiert [#569]
+- PageLayout::postQuestion ist nach dem Aufruf nicht im Fokus und nicht barrierefrei [#609]
+- Einzelbuchung einer Wiederholungsbuchung löschen funktioniert nicht immer [#704]
+- Drucken von Belegungsplänen funktioniert für Dozenten nicht [#836]
+- Manuelle Buchungen: Reservierungen können in den selben Raum kopiert werden [#840]
+- Raumanfrage: Rüstzeit wird nicht mit angezeigt [#859]
+- Termine kürzer als RESOURCES_MIN_BOOKING_TIME führen zu nicht auflösbaren Raumanfragen [#862]
+- Blubber: Call to a member function getJSONData() on null [#864]
+- Blubber Benachrichtigungen für Einrichtungen deaktivieren [#1021]
+- Fehler im Code der Raumverwaltung [#1331]
+- Unbekannte Variablen in class Course_StudygroupController::details_action() [#1337]
+- PHP-Warnungen auf den externen Seiten [#1346]
+- Sperrzeiten werden auf den Zeitpunkt der Buchung (nicht den zu buchenden Termin) angewendet [#1350]
+- Ankündigungen bleiben nach dem Löschen eines Kurses zurück, wenn NEWS_DISABLE_GARBAGE_COLLECT aktiviert ist [#1355]
+- Fullscreen Icon in Nav Bar zentriert [#1356]
+- Stundenplan: Seltsames Pixelicon ersetzen [#1369]
+- Performance der Gruppenpläne sehr schlecht [#1398]
+- "Ordner bearbeiten" zeigt immer an, daß der Ordner keine Elemente enthält [#1402]
+- MultiPersonSearch: Falsche Anzeige bei aufgelöstem Aktionsmenü [#1404]
+- Druckansicht: Schrift in Tabellen wird kleiner [#1409]
+- "Gruppe alphabetisch sortieren" unterscheidet Groß-/Kleinschreibung [#1410]
+- Belegungsplan: Details zur Buchung verraten Veranstaltungsdetails zu VA-bezogenen Buchungen, die im Belegungsplan nicht angezeigt werden [#1411]
+- Raumsuche: Einstellungen gehen nach der Suche verloren [#1422]
+- Raumsuche: "Raumtyp" wird als Suchkriterium angeboten, obwohl es gar nicht belegt ist [#1423]
+- Raumsuche: Ergebnisse sind nicht sortiert [#1425]
+- Dateiverwaltung: Leere Dateinamen beim Herunterladen [#1426]
+- Gruppenseite: Bulk-Aktion zum Ändern der Gruppengröße löst die Zuordnung der Gruppe zu einem Termin [#1427]
+- Temporäre Rechtevergabe Bulkaction für Eintrag der Zeiten funktioniert nicht [#1428]
+- Temporäre Rechtevergabe: nur 20 Teilnehmer aus Veranstaltung werden übernommen [#1429]
+- VA-Administration: Klick auf TN-Zahl zeigt bei Hauptveranstaltungen auf die falsche URL [#1439]
+- Raumattribut "room_type" kann nicht bearbeitet werden [#1440]
+- Raumsuche: Enter schickt die Suche (manchmal) nicht ab [#1441]
+- Migration 1.254 kann wegen doppelten Einträgen in der „hash“-Spalte der „opengraphdata“-Tabelle abbrechen [#1445]
+- Anlegen einer Veranstaltung für Dozent zeigt keinen Dialog [#1455]
+- Anmeldesets: Veranstaltungen konfigurieren für Dozenten nicht möglich [#1456]
+- Berechtigungen für die gesamte Raumgruppe setzen - funktioniert nicht [#1462]
+- data-activates und Dialoge funktionieren nicht richtig [#1490]
+- Raumanfragen: Option für Rückmeldung an alle Lehrenden soll wieder immer verfügbar sein [#1494]
+- Teilnehmerexport als csv zeigt Zwischenüberschriften "Lehrende" und "Studierende" [#1503]
+- MvvPerm::getRoles() filtert Nutzerrollen falsch [#1546]
+- PHP Warning:  array_column() expects parameter 1 to be array, null given in app/controllers/course/members.php [#1548]
+- Fehlende Abfrage, um Blubberbenachrichtigungen in Einrichtungen abzustellen [#1587]
+- Fehlermeldung nach dem Anlegen einer Veranstaltung [#1595]
+- Link zum Belegungsplan über einen QR-Code fordert zur Eingabe von Login-Daten auf [#1598]
+- XSS-Probleme im Event-Log (Admin > Log) [#1619]
+- Buchungen löschen schlägt über CLI fehl [#1623]
+- Bei admin/courses wird die die erste Einrichtung statt alle Einrichtungen vorausgewählt [#1656]
+- Hinter dem Namen eines Abschlusses steht immer "()", wenn kein Kurzname hinterlegt ist [#1669]
+- json_encode() liefert leere Texte, wenn mehr als eine Sprache für Inhalte definiert ist [#1672]
+- Typo im Template `app/views/messages/_message_row.php [#1673]
+- Verwaltung der Nutzerdomänen: PHP fatal error: Allowed memory size exhausted [#1677]
+- Fehler bei Terminvergabe, wenn Nutzer gelöscht wird [#1683]
+- Der Belegungsplan wird nicht angezeigt, wenn eine Raumanfrage mit Rüstzeit für eine ganze Veranstaltung existiert, in der keine Termine sind [#1700]
+- Fehler der Datenbankanbindung ist nicht aussagekräftig [#1716]
+- Fragebögen: SQL-Fehler bei Suche nach Einrichtungen [#1727]
+- Dateibereich: Optische Eigenheiten der Tabellen beheben [#1728]
+- Anzeigefehler im Dialog zum Auswahl einer Datei [#1730]
+- Konflikt zwischen Sprechstunden im Kern und dem alten Plugin [#1731]
+- PHP Warning:  count(): Parameter must be an array or an object that implements Countable [#1741]
+- Veranstaltungsstundenplan: Studiengangteil läßt sich nicht abwählen [#1771]
+- Benutzerverwaltung - Suche lässt sich nicht sortieren [#1781]
+- Select mit submit-upon-select schickt das falsche Formular ab [#1783]
+
 21.07.2022 v 5.1
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.1&state=all
 - Trails: redirect() soll sich wie url_for() bedienen lassen [#1]
