--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,141 @@
+01.12.2022 v 5.2
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.2&state=all
+- Bilddateien oder PHP-Skripte sind als "ausführbar" markiert [#44]
+- Barrierefreiheit: Alternatives, kontrastreiches Farbschema anbieten [#96]
+- SEMESTER_TIME_SWITCH optimieren [#208]
+- Wildcard für HTTP_PROXY_IGNORE [#582]
+- I18N für die Datenfelder der Tabelle user_inst [#605]
+- Aktionsmenüs barrierearmer machen [#608]
+- Event TopicDidCopy beim Kopieren von Themen werfen [#628]
+- Darstellungsfilter im Adminbereich für Veranstaltungen um Einrichtung erweitern [#695]
+- Tabellen für Hilfetexte und Touren erweitern [#758]
+- PHP8: Fatal error beim Aufruf von Stud.IP-Seiten [#765]
+- Schnellsuche findet nur noch Treffer im aktuellen Semester [#766]
+- CRONJOBS_ESCALATION entfernen [#771]
+- OER Campus an den OER-Search-Index (OERSI) anbinden [#783]
+- Alte Kern-Plugins in neue Struktur überführen [#814]
+- Formularbaukasten und Ankündigungsbearbeitung [#837]
+- check_admission-Cronjob um Mailversand erweitern [#841]
+- Anzeige von Veranstaltungen auf der Profilseite auf das letzte, aktuelle und nächste Semester beschränken [#842]
+- OER Vorschläge von Studierenden [#852]
+- Teilnehmendenseite: Aktion „Rundmail schreiben“ hinzufügen [#877]
+- Anmeldesets: Veranstaltungen konfigurieren für alle Anmelderegeln [#879]
+- Installation von zwei Testsystemen von main bringen unterschiedliche Ergebnisse [#893]
+- XSS auf der Plus/Mehr-Seite [#895]
+- Erweiterung der von den externen Seiten verwendeten Template-Engine exTpl [#896]
+- StEP00365: Suchfunktion auf Coursewareseiten [#915]
+- StEP00364: Verknüpfen / Zuweisen von Lernmaterialien zu Veranstaltungen [#917]
+- StEP00363: Externe Ansicht als Link für Courseware-Seiten [#918]
+- Terminvergabe: Beim Anlegen der Terminserien soll es möglich sein, eine Pause anzugeben [#925]
+- Tabelle `user_inst` einen einfachen, numerischen PK geben [#947]
+- PHP8: Warnings auf der Login- und Startseite wegen undefinierter Variablen oder Indizes [#957]
+- eslint in den Webpack-Prozess integrieren [#963]
+- Sichtbare Meldung nach serverseitigem Fehler beim Dialogaufruf [#966]
+- Fehler im JS korrigieren [#968]
+- PHP8: Veranstaltungs-Übersicht wirft viele PHP Warnings [#971]
+- Feineinstellung auf Einrichtungen für Anmelderegeln entfernen [#973]
+- JS-Lib für QRCodes per npm laden [#993]
+- PHP8: Oer_OaiController ist als PluginController kaputt [#1015]
+- Semesterangabe neben dem Veranstaltungstitel hinzufügen [#1031]
+- Einbindung externer Bilder im HTML-Editor über den media_proxy funktioniert nicht mehr [#1032]
+- ActionMenu::THRESHOLD einstellbar machen [#1033]
+- Beschreibungen für Teilnehmergruppen [#1034]
+- StEP00366: OAuth2 zur Autorisierung für externe Schnittstellen [#1035]
+- Teilnehmendenseite: Drei Punkte von Aktionsmenüs sind in die Länge gezogen [#1036]
+- JS Fehler beim make [#1038]
+- Undefined vars in courseware [#1039]
+- Syntaxfehler in Migration 5.2.7 [#1041]
+- Wiki: Aktionsmenü in der Kopfzeile ist nach unten gerutscht [#1046]
+- Fehler im Dateibereich bei freien Veranstaltungen [#1048]
+- Stud.IP-Vuex-Store [#1052]
+- IDE zeigt syntaxfehler an [#1053]
+- Hilfe-Wiki-Link ändern von 5.0 auf 5 [#1055]
+- Spezielle Controllerklassen als abstrakt markieren [#1056]
+- CW: Kleinigkeiten OER Campus-Vorschläge [#1061]
+- Forum wirft PHP8-Warnings [#1064]
+- Migration 5.2.2 kann nicht doppelt ausgeführt werden [#1067]
+- Schnellsuche findet keine Treffer im nächsten Semester [#1070]
+- Wiki wirft PHP8-Warnings [#1075]
+- Blubber wirft PHP8-Warnings [#1077]
+- Profilseiten erzeugen PHP8 Warnings [#1078]
+- Forumbeiträge lassen sich nicht erstellen [#1082]
+- Ckeditor wird nicht jedes mal geladen [#1084]
+- CKEditor Bilder einbinden funktioniert nicht [#1085]
+- CKeditor und i18n Umschaltung [#1088]
+- Mehrfaches einbinden von CKEditor funktioniert nicht [#1089]
+- Forum ist kaputt, zeigt nur noch leere Übersichtsseite an [#1128]
+- CK5 - Abbrechen des Editors führt zu einem Fehler [#1154]
+- CKEditor5 Insert-Math-Modus [#1155]
+- Falsches Zeichen in RangeInput.vue [#1156]
+- CKEditor GUI-Fehler [#1157]
+- Ankündigungen Bereichsauswähler zeigt [object Object] [#1158]
+- Route `GET /institute-memberships/{id}` defekt [#1164]
+- Sicherheitsupdate `jspdf-yworks` [#1166]
+- JS-Fehler im Veranstaltungsstundenplan [#1167]
+- Courseware-Suche: "Vollbild einschalten" funktioniert nicht auf der Trefferliste [#1169]
+- Courseware: "Informationen zur Seite" zeigt JSON an [#1170]
+- Courseware: Suchergebnisse bietet Seitenaktionen in der Sidebar an [#1171]
+- Courseware: Schnellsuche zeigt nicht alle Treffer an und hat komisches Layout [#1172]
+- WYSIWYG-Editor: Einfügen eines Textes aus dem Zwischenspeicher ergibt html [#1178]
+- Footer auf mobilen Geräten noch unschön [#1179]
+- StEP00364: Barrierefreiheits-Probleme [#1186]
+- OAuth2 Admin-Seite funktioniert nicht, weil das Template admin/oauth2/_notices fehlt [#1197]
+- "Multiple migrations have the version number 5.2.9" [#1198]
+- TIC877: Dialog zum Schreiben der Rundmail ist zu klein [#1199]
+- Die Tabellen für Hilfetexte und Touren sind zu breit [#1201]
+- Gitlab-CI PHP-Unittest-Reports [#1202]
+- Die Ausführung von make schlägt wegen fehlendem gettext.js fehl [#1203]
+- OER Vorschläge von Studierenden: Polishing [#1204]
+- StEP #837: Barrierefreiheitsprobleme mit I18N-Feldern und dem Hinweis auf Pflichtfelder [#1206]
+- Barrierefreiheits-Probleme in TIC #96 [#1207]
+- Barrierefreiheitsprobleme bei WYSIWYG-Feldern mit dem CKEditor 5 [#1213]
+- Verwendung von input[type=image] im Aktionsmenü [#1218]
+- Vue-Komponente `StudipActionMenu` unvollständig [#1219]
+- CK5-Editor: Link-Popup funktioniert bei Ankündigungen nicht richtig [#1226]
+- Undefined variables [#1235]
+- Fehler vom Typ "Static call to instance method" [#1237]
+- Fehler/Toter Code in lib/classes/ContentBoxHelper.php [#1241]
+- Fehler vom Typ "Unsafe usage of new static()" [#1245]
+- Teilnehmerseite: No value could be found for UserStudyCourse::studycourse_name [#1266]
+- Undefinierte Methoden in `Seminar_Auth` [#1275]
+- Weitere durch PHPStan entdeckte Fehler/Unstimmigkeiten [#1276]
+- Fehler vom Typ "Method/Function should return XY but return statement is missing" [#1278]
+- Barrierefreiheit: Kontrastschema - nicht lesbarer Text im Profil [#1287]
+- StudipMemoryCache speichert aufgrund eines Tippfehlers nichts [#1288]
+- Formularbaukasten fügt v-cloak im globalen Stylesheet hinzu [#1294]
+- Fehler vom Typ `Access to undefined property` [#1295]
+- 500 Cannot access protected property RESTApi [#1297]
+- Benutzerverwaltung: Cannot access protected property DataFieldSelectboxEntry::$type_param [#1298]
+- Öffentlich zugängliche Raumpläne  - Liste der Räume bietet keine Funktionen an [#1306]
+- Fehler in den Tests [#1309]
+- Filter der Veranstaltungssuche sind verschwunden [#1324]
+- Fehler im Code der Controller [#1328]
+- Fehler beim Aufruf von Verwaltung > Zugangsberechtigungen [#1334]
+- Cannot assign by reference to overloaded object [#1338]
+- "Rundmail schreiben" funktioniert für Studenten nicht mehr [#1349]
+- Ankündigen  - Alle als gelesen markieren [#1362]
+- Ankündigungen: Layout-Fehler bei den Dropdowns im Dialog [#1363]
+- STUDIP.URLHelper überschreibt Parameter in der übergebenen URL [#1395]
+- match_route() hat Probleme mit "/" am Pfadende [#1396]
+- Courseware: Verschiebe-Pfeile werden als Verknüpfung vorgelesen [#1413]
+- JavaScript Unit-Tests sind kaputt [#1433]
+- PHP-Doc Fehler im FileManager [#1435]
+- IDE meldet Fehler im Code - Function name must be callable - a string, [#1469]
+- Datei oauth2.php im public Ordner ohne Funktion [#1485]
+- Teilnehmendenseite: Bulk-Aktion „Nachricht senden“ liefert eine Exception mit SQL-Fehler [#1496]
+- Ankündigung anlegen/bearbeiten: „In weiteren Bereichen anzeigen“: Die Namen von Fakultäten werden nicht angezeigt [#1501]
+- High Contrast Mode: Verursacht weissen Text und schwarzen Rahmen im Meetings-Plugin [#1544]
+- Forum: Fehler beim Zurücksetzen der Suche [#1549]
+- Terminvergabe: Es werden manchmal zu wenige Slots erzeugt [#1582]
+- datafields collection an SORM Objekte ist immer leer [#1588]
+- inkonsistente Definition der computed-Eigenschaften "owner()" und "editor()" [#1614]
+- Rundmail schreiben: Name der Veranstaltung wird nicht als Betreff gesetzt [#1622]
+- Ankündigungen: SQL Fehler bei der Suche nach weiteren Bereichen [#1666]
+- Mehrsprachige Inhalte lassen sich über den Formbuilder nicht speichern [#1708]
+- Formularbaukasten: Buttons sind nicht in einem footer-Element und außerhalb des Formulares [#1820]
+- footer-Elmente im Formularbaukasten sind nach der Lösung in #1820 immer noch an der falschen Position [#1822]
+- Slider: Bedeutungen der Werte sind nicht klar ersichtlich [#1832]
+
 18.11.2022 v 5.1.1
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.1.1&state=all
 - Courseware PDF-Export: Block Infomationen im Fallback nicht immer brauchbar [#723]
